--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
+anyio==4.10.0
 attrs==25.3.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 outcome==1.3.0.post0
 PySocks==1.7.1
 python-dotenv==1.1.1
+python-telegram-bot==22.3
 requests==2.32.5
 selenium==4.35.0
 setuptools==80.9.0
